<resources>
    <string name="error_generic">An error occurred.</string>
    <string name="error_empty">This cannot be empty.</string>
    <string name="error_invalid_domain">Invalid domain entered</string>
    <string name="error_failed_app_registration">Failed authenticating with that instance.</string>
    <string name="error_no_web_browser_found">Couldn\'t find a web browser to use.</string>
    <string name="error_authorization_unknown">An unidentified authorization error occurred.</string>
    <string name="error_authorization_denied">Authorization was denied.</string>
    <string name="error_retrieving_oauth_token">Failed getting a login token.</string>
    <string name="error_compose_character_limit">The status is too long!</string>
    <string name="error_media_upload_size">The file must be less than 4MB.</string>
    <string name="error_media_upload_type">That type of file cannot be uploaded.</string>
    <string name="error_media_upload_opening">That file could not be opened.</string>
    <string name="error_media_upload_permission">Permission to read media is required.</string>
    <string name="error_media_download_permission">Permission to store media is required.</string>
    <string name="error_media_upload_image_or_video">Images and videos cannot both be attached to the same status.</string>
    <string name="error_media_upload_sending">The upload failed.</string>
    <string name="error_report_too_few_statuses">At least one status must be reported.</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_public_local">Local</string>
    <string name="title_public_federated">Federated</string>
    <string name="title_thread">Thread</string>
    <string name="title_tag">#%s</string>
    <string name="title_statuses">Posts</string>
    <string name="title_follows">Follows</string>
    <string name="title_followers">Followers</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_mutes">Muted users</string>
    <string name="title_blocks">Blocked users</string>
    <string name="title_follow_requests">Follow Requests</string>
    <string name="title_edit_profile">Edit your profile</string>
    <string name="status_username_format">\@%s</string>
    <string name="status_boosted_format">%s boosted</string>
    <string name="status_sensitive_media_title">Sensitive Media</string>
    <string name="status_sensitive_media_directions">Click to view</string>
    <string name="status_content_warning_show_more">Show More</string>
    <string name="status_content_warning_show_less">Show Less</string>
    <string name="footer_end_of_statuses">end of the statuses</string>
    <string name="footer_end_of_notifications">end of the notifications</string>
    <string name="footer_end_of_accounts">end of the accounts</string>
    <string name="footer_empty">There are no toots here so far. Pull down to refresh!</string>
    <string name="notification_reblog_format">%s boosted your toot</string>
    <string name="notification_favourite_format">%s favourited your toot</string>
    <string name="notification_follow_format">%s followed you</string>
    <string name="report_username_format">Report @%s</string>
    <string name="report_comment_hint">Additional comments?</string>
    <string name="action_reply">Reply</string>
    <string name="action_reblog">Boost</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_more">More</string>
    <string name="action_compose">Compose</string>
    <string name="action_login">Login with Mastodon</string>
    <string name="action_logout">Log Out</string>
    <string name="action_logout_confirm">Do you wish to logout</string>
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_block">Block</string>
    <string name="action_unblock">Unblock</string>
    <string name="action_report">Report</string>
    <string name="action_delete">Delete</string>
    <string name="action_send">TOOT</string>
    <string name="action_send_public">TOOT!</string>
    <string name="action_retry">Retry</string>
    <string name="action_mark_sensitive">Mark media sensitive</string>
    <string name="action_hide_text">Hide text behind warning</string>
    <string name="action_ok">Ok</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_back">Back</string>
    <string name="action_view_profile">Profile</string>
    <string name="action_view_preferences">Preferences</string>
    <string name="action_view_favourites">Favourites</string>
    <string name="action_view_mutes">Muted users</string>
    <string name="action_view_blocks">Blocked users</string>
    <string name="action_view_follow_requests">Follow Requests</string>
    <string name="action_view_thread">Thread</string>
    <string name="action_view_media">Media</string>
    <string name="action_open_in_web">Open in browser</string>
    <string name="action_submit">Submit</string>
    <string name="action_photo_pick">Add media</string>
    <string name="action_photo_take">Take photo</string>
    <string name="action_share">Share</string>
    <string name="action_mute">Mute</string>
    <string name="action_unmute">Unmute</string>
    <string name="action_mention">Mention</string>
    <string name="toggle_nsfw">NSFW</string>
    <string name="action_compose_options">Options</string>
    <string name="action_open_drawer">Open drawer</string>
    <string name="action_clear">Clear</string>
    <string name="action_save">Save</string>
    <string name="action_edit_profile">Edit profile</string>
    <string name="action_undo">Undo</string>
    <string name="action_accept">Accept</string>
    <string name="action_reject">Reject</string>
    <string name="send_status_link_to">Share toot URL to…</string>
    <string name="send_status_content_to">Share toot to…</string>
    <string name="search">Search accounts…</string>
    <string name="confirmation_send">Toot!</string>
    <string name="confirmation_reported">Sent!</string>
    <string name="confirmation_unblocked">User unblocked</string>
    <string name="confirmation_unmuted">User unmuted</string>
    <string name="hint_domain">Which instance?</string>
    <string name="hint_compose">What\'s happening?</string>
    <string name="hint_content_warning">Content warning</string>
    <string name="hint_display_name">Display name</string>
    <string name="hint_note">Bio</string>
    <string name="label_avatar">Avatar</string>
    <string name="label_header">Header</string>
    <string name="link_whats_an_instance">What\'s an instance?</string>
    <string name="login_connection">Connecting…</string>
    <string name="dialog_whats_an_instance">The address or domain of any instance can be entered
        here, such as mastodon.social, icosahedron.website, social.tchncs.de, and
        <a href="https://github.com/tootsuite/mastodon/blob/master/docs/Using-Mastodon/List-of-Mastodon-instances.md">more!</a>
        \n\nIf you don\'t yet have an account, you can enter the name of the instance you\'d like to
        join and create an account there.\n\nAn instance is a single place where your account is
        hosted, but you can easily communicate with and follow folks on other instances as though
        you were on the same site.
        \n\nMore info can be found at <a href="https://mastodon.social/about">mastodon.social</a>.
    </string>
    <string name="dialog_title_finishing_media_upload">Finishing Media Upload</string>
    <string name="dialog_message_uploading_media">Uploading…</string>
    <string name="dialog_download_image">Download</string>
    <string name="dialog_message_follow_request">Follow request pending: awaiting their response</string>
    <string name="visibility_public">Public: Post to public timelines</string>
    <string name="visibility_unlisted">Unlisted: Do not show in public timelines</string>
    <string name="visibility_private">Followers-Only: Post to followers only</string>
    <string name="visibility_direct">Direct: Post to mentioned users only</string>
    <string name="pref_title_notification_settings">Notifications</string>
    <string name="pref_title_edit_notification_settings">Edit Notifications</string>
    <string name="pref_title_notifications_enabled">Push notifications</string>
    <string name="pref_title_notification_alerts">Alerts</string>
    <string name="pref_title_notification_alert_sound">Notify with a sound</string>
    <string name="pref_title_notification_alert_vibrate">Notify with vibration</string>
    <string name="pref_title_notification_alert_light">Notify with light</string>
    <string name="pref_title_notification_filters">Notify me when</string>
    <string name="pref_title_notification_filter_mentions">mentioned</string>
    <string name="pref_title_notification_filter_follows">followed</string>
    <string name="pref_title_notification_filter_reblogs">my posts are boosted</string>
    <string name="pref_title_notification_filter_favourites">my posts are favourited</string>
    <string name="pref_title_appearance_settings">Appearance</string>
    <string name="pref_title_light_theme">Use the Light Theme</string>
    <string name="pref_title_browser_settings">Browser</string>
    <string name="pref_title_custom_tabs">Use Chrome Custom Tabs</string>
    <string name="pref_title_hide_follow_button">Hide follow button while scrolling</string>
    <string name="pref_title_status_filter">Timeline filtering</string>
    <string name="pref_title_status_tabs">Tabs</string>
    <string name="pref_title_show_boosts">Show boosts</string>
    <string name="pref_title_show_replies">Show replies</string>
    <string name="notification_mention_format">%s mentioned you</string>
    <string name="notification_summary_large">%1$s, %2$s, %3$s and %4$d others</string>
    <string name="notification_summary_medium">%1$s, %2$s, and %3$s</string>
    <string name="notification_summary_small">%1$s and %2$s</string>
    <string name="notification_title_summary">%d new interactions</string>
    <string name="description_account_locked">Locked Account</string>
    <string name="about_title_activity">About</string>
    <string name="about_application_version">App version: %s</string>
    <string name="about_project_site">
        Project website:\n
        https://tusky.keylesspalace.com
    </string>
    <string name="about_bug_feature_request_site">
        Bug reports &amp; feature requests:\n
        https://github.com/Vavassor/Tusky/issues
    </string>
    <string name="about_tusky_account">Tusky\'s Profile</string>
    <string name="status_share_content">Share content of toot</string>
    <string name="color_navigation">Navigation Bar Tinting</string>
    <string name="rounded_images">Rounded profile pictures</string>
    <string name="copyright_summary">Check out who has made Panoramic so great</string>
    <string name="copyright_title">Copyright</string>
    <string name="imprint">Imprint</string>
    <string name="version">Version</string>
    <string name="based">Based on Tusky</string>
    <string name="based_summary">Tap to check it out</string>
    <string name="license">Licensed under GPLv3</string>
    <string name="license_summary">Tap to check out the source</string>
    <string name="help">Help</string>
    <string name="remads">Remove ads and get more features</string>
    <string name="remads_summary">Purchase Panoramic+ to support us</string>
    <string name="donation_standard">STANDARD</string>
    <string name="donation_medium">MEDIUM</string>
    <string name="donation_large">LARGE</string>
    <string name="donation_xl">EXTRA LARGE</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Support further development</string>
</resources>