<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/preferences_file_key">

    <PreferenceCategory android:title="@string/help">

        <Preference
            android:key="remads"
            android:title="@string/remads"
            android:summary="@string/remads_summary" />

        <Preference
            android:title="@string/donate"
            android:summary="@string/donate_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.fa.imaged"
                android:targetClass="com.fa.donation.DonateActivity"
                />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_appearance_settings">

        <SwitchPreference
            android:key="lightTheme"
            android:title="@string/pref_title_light_theme"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="navigationColor"
            android:title="@string/color_navigation"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="roundPics"
            android:title="@string/rounded_images"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_browser_settings">
        <SwitchPreference
            android:key="customTabs"
            android:title="@string/pref_title_custom_tabs"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_status_filter">
        <PreferenceScreen android:title="@string/pref_title_status_tabs">

            <PreferenceCategory
                android:dependency="notificationsEnabled"
                android:title="@string/title_home">
                <SwitchPreference
                    android:key="tabFilterHomeBoosts"
                    android:title="@string/pref_title_show_boosts"
                    android:defaultValue="true" />
                <SwitchPreference
                    android:key="tabFilterHomeReplies"
                    android:title="@string/pref_title_show_replies"
                    android:defaultValue="true" />
            </PreferenceCategory>

        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_notification_settings">
    <PreferenceScreen android:title="@string/pref_title_edit_notification_settings">

        <SwitchPreference
            android:key="notificationsEnabled"
            android:title="@string/pref_title_notifications_enabled"
            android:defaultValue="true" />

        <PreferenceCategory
            android:dependency="notificationsEnabled"
            android:title="@string/pref_title_notification_filters">

            <SwitchPreference
                android:key="notificationFilterMentions"
                android:title="@string/pref_title_notification_filter_mentions"
                android:defaultValue="true" />

            <SwitchPreference
                android:key="notificationFilterFollows"
                android:title="@string/pref_title_notification_filter_follows"
                android:defaultValue="true" />

            <SwitchPreference
                android:key="notificationFilterReblogs"
                android:title="@string/pref_title_notification_filter_reblogs"
                android:defaultValue="true" />

            <SwitchPreference
                android:key="notificationFilterFavourites"
                android:title="@string/pref_title_notification_filter_favourites"
                android:defaultValue="true" />

        </PreferenceCategory>

        <PreferenceCategory
            android:dependency="notificationsEnabled"
            android:title="@string/pref_title_notification_alerts">

            <SwitchPreference
                android:key="notificationAlertSound"
                android:title="@string/pref_title_notification_alert_sound"
                android:defaultValue="true" />

            <SwitchPreference
                android:key="notificationAlertVibrate"
                android:title="@string/pref_title_notification_alert_vibrate"
                android:defaultValue="true" />

            <SwitchPreference
                android:key="notificationAlertLight"
                android:title="@string/pref_title_notification_alert_light"
                android:defaultValue="true" />

        </PreferenceCategory>

    </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/imprint">

        <Preference
            android:title="@string/version"
            android:summary="@string/version_number" />

        <Preference
            android:title="@string/copyright_title"
            android:summary="@string/copyright_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.fa.imaged"
                android:targetClass="com.fa.mastodon.activity.AboutActivity"
                />
        </Preference>

        <Preference
            android:title="@string/based"
            android:summary="@string/based_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.keylesspalace.tusky" />
        </Preference>

        <Preference
            android:title="@string/license"
            android:summary="@string/license_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/FlorentAnders/Panoramic" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>
