<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2015 Florent Anders
You are not allowed to use this resource without contacting
play@fa.bugs3.com and asking for the permission to use it.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/card_background_light"
    android:layout_height="match_parent">

    <Button
        android:layout_width="130dp"
        style="?android:attr/buttonStyleSmall"
        android:layout_height="wrap_content"
        android:text="@string/donation_standard"
        android:id="@+id/buttonStandard"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="130dp"
        style="?android:attr/buttonStyleSmall"
        android:layout_height="wrap_content"
        android:text="@string/donation_medium"
        android:id="@+id/buttonMedium"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="130dp"
        style="?android:attr/buttonStyleSmall"
        android:layout_height="wrap_content"
        android:text="@string/donation_large"
        android:id="@+id/buttonLarge"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="130dp"
        style="?android:attr/buttonStyleSmall"
        android:layout_height="wrap_content"
        android:text="@string/donation_xl"
        android:id="@+id/buttonXL"
        android:layout_gravity="center_horizontal" />


</LinearLayout>